control irrigation on hardware